--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=company
 
 #multipart max size
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
